# vex

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SOUL.md  fix_install_ps1.py  fix_install_sh.py  fix_installer.py  fix_server.py  fix_stacks.py  fix_test_tools.py  fix_test_tools2.py  install.ps1  install.sh  llms.txt  package.json  plan.md  pyproject.toml  update_pr.js  update_skills.js  update_skills.sh  update_vue.js
adapters/: claude-code.json  codex.json  copilot-cli.json  cursor.json  factory-droid.json  gemini-cli.json  install_adapter.py  opencode.json  zed.json
commands/: build-fix.md  code-review.md  cost-report.md  debug.md  docs-generate.md  multi-backend.md  multi-execute.md  multi-frontend.md  multi-plan.md  multi-workflow.md  optimize.md  plan.md  refactor.md  security-audit.md  tdd.md
config/: models.json  profiles.json  stacks.json
contexts/: debug.md  dev.md  optimize.md  research.md  review.md
dashboard/: app.py  server.py
hooks/: gate-guard-rules.json  hooks.json  profiles.json
marketplace/: README.md  catalog.json  installer.py
tests/: run-all.js  test-vex-cli.js  test-workflow-pack.js  test_adapters.py  test_hook_profiles.py  test_hooks.py  test_install.py  test_install_profiles.py  test_new_optimization_skills.py  test_tools.py  test_vex_cli_doctor.py  test_vex_cli_repair.py  test_vex_cli_uninstall.py  test_vex_instinct.py  test_vex_optimize.py  test_vex_security.py  test_vex_sessions.py  test_vex_shield_and_gate_guard.py
tools/: __init__.py  vex-cost.py  vex-memory.py  vex-skill-gen.py  vex.py  (+17 more)
(+141 files in other folders)
